--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -260,10 +261,8 @@ h3 {
   cursor: pointer;
 }
 
-#inputField,
-.inputField {
+.text {
   width: 100%;
-  height: 35px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.05);
   border: none;
@@ -273,8 +272,15 @@ h3 {
   box-sizing: border-box;
 }
 
-#inputField:focus,
-.inputField:focus {
+.textInput {
+  height: 35px;
+}
+
+.textArea  {
+  height: auto;
+}
+
+.text:focus {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
