--- a/css/styles.scss
+++ b/css/styles.scss
@@ -265,10 +265,8 @@ h3 {
 }
 
 // inputfelder
-#inputField,
-.inputField {
+.text {
   width: 100%;
-  height: 35px;
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.05);
   border: none;
@@ -276,6 +274,14 @@ h3 {
   color: white;
   padding: 25px 20px;
   box-sizing: border-box;
+
+  &Input {
+    height: 35px;
+  }
+
+  &Area  {
+    height: auto;
+  }
 
   &:focus {
     background-color: rgba(255, 255, 255, 0.1);
