--- a/css/styles.css
+++ b/css/styles.css
@@ -260,8 +260,14 @@ h3 {
   cursor: pointer;
 }
 
-#inputField,
-.inputField {
+.inputWrapper {
+  margin: 0 !important;
+  display: flex;
+  justify-content: space-between;
+}
+
+.text {
+  color-scheme: dark;
   width: 100%;
   height: 35px;
   border-radius: 10px;
@@ -273,8 +279,31 @@ h3 {
   box-sizing: border-box;
 }
 
-#inputField:focus,
-.inputField:focus {
+.text[type="file" i]::-webkit-file-upload-button {
+  all: unset;
+  font-weight: bold;
+  margin-right: 30px;
+}
+
+.textImage {
+  cursor: pointer;
+  height: auto;
+}
+
+.textArea {
+  height: auto;
+}
+
+.textDate {
+  color: rgba(255, 255, 255, 0.4);
+  width: 35%;
+}
+
+.textUrl {
+  width: 62%;
+}
+
+.text:focus {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
