--- a/css/styles.scss
+++ b/css/styles.scss
@@ -265,8 +265,19 @@ h3 {
 }
 
 // inputfelder
-#inputField,
-.inputField {
+
+.inputWrapper {
+  margin: 0 !important;
+  display: flex;
+  justify-content: space-between;
+}
+
+// input[type="date"]:invalid::-webkit-datetime-edit {
+//   color: rgba(255, 255, 255, 0.4);
+// }
+
+.text {
+  color-scheme: dark;
   width: 100%;
   height: 35px;
   border-radius: 10px;
@@ -276,6 +287,28 @@ h3 {
   color: white;
   padding: 25px 20px;
   box-sizing: border-box;
+
+  &[type="file" i]::-webkit-file-upload-button {
+    all: unset;
+    font-weight: bold;
+    margin-right: 30px;
+  }
+
+  &Image {
+    cursor: pointer;
+    height: auto;
+  }
+
+  &Area {
+    height: auto;
+  }
+  &Date {
+    color: rgba(255, 255, 255, 0.4);
+    width: 35%;
+  }
+  &Url {
+    width: 62%;
+  }
 
   &:focus {
     background-color: rgba(255, 255, 255, 0.1);
