--- a/css/styles.scss
+++ b/css/styles.scss
@@ -194,7 +194,7 @@ h3 {
 
 // modal komponente
 #modal {
-  background-color: rgba(0, 0, 0, 1);
+  background-color: #121212;
   border-radius: 10px;
   width: 70%;
   height: 80%;
