--- a/css/styles.scss
+++ b/css/styles.scss
@@ -133,6 +133,10 @@ h3 {
   color: #fff;
 }
 
+.card_image {
+  max-width: 100%;
+}
+
 //  card komponente
 .card {
   background-color: rgba(255, 255, 255, 0.05);
