--- a/css/styles.scss
+++ b/css/styles.scss
@@ -142,7 +142,8 @@ h3 {
   background-color: rgba(255, 255, 255, 0.05);
   border-radius: 10px;
   cursor: pointer;
-  // display: flex;
+  display: flex;
+  flex-direction: row;
   height: auto;
 
   margin-bottom: 5px;
@@ -150,6 +151,22 @@ h3 {
   width: 600px;
 
   padding: 2em;
+
+  .ImageContainer {
+    width: 50%;
+    height: 100%;
+
+    img {
+      width: 100%;
+      height: 100%;
+
+    }
+
+    .cardContent {
+      width: 50%;
+      height: 100%;
+    }
+  }
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.08);
@@ -180,6 +197,7 @@ h3 {
     width: 100%;
   }
 }
+
 
 // wrapper für card und modals
 .wrapper {
@@ -306,7 +324,7 @@ h3 {
   padding: 25px 20px;
   box-sizing: border-box;
 
-  &[type="file" i]::-webkit-file-upload-button {
+  &[type="file"i]::-webkit-file-upload-button {
     all: unset;
     font-weight: bold;
     margin-right: 30px;
@@ -321,10 +339,12 @@ h3 {
   &Area {
     height: auto;
   }
+
   &Date {
     color: rgba(255, 255, 255, 0.4);
     width: 35%;
   }
+
   &Url {
     width: 62%;
   }
@@ -333,7 +353,7 @@ h3 {
     height: 35px;
   }
 
-  &Area  {
+  &Area {
     height: auto;
   }
 
