--- a/css/styles.scss
+++ b/css/styles.scss
@@ -144,7 +144,7 @@ h3 {
   cursor: pointer;
   display: flex;
   flex-direction: row;
-
+  gap: 10px;
   height: auto;
   justify-content: space-between;
 
