--- a/css/styles.scss
+++ b/css/styles.scss
@@ -173,8 +173,12 @@ h3 {
   img {
     width: 50%;
     margin: 0 !important;
+    object-fit: cover;
 
-    // height: 100%;
+    @media (max-width: 768px) {
+      width: 100%;
+      // height: 100%;
+    }
   }
 
   .cardContent {
@@ -204,12 +208,14 @@ h3 {
 
   &_languages {
     color: white;
-    width: 100%;
+    width: 85%;
+    margin-left: 5px;
   }
 
   &_title {
     color: white;
-    width: 100%;
+    width: 85%;
+    margin-left: 5px;
   }
 }
 
