--- a/css/styles.scss
+++ b/css/styles.scss
@@ -214,6 +214,12 @@ h3 {
 
   &_title {
     color: white;
+    width: 100%;
+    margin-left: 5px;
+  }
+
+  &_desc {
+    color: white;
     width: 85%;
     margin-left: 5px;
   }
